--- a/resources/research_skills/reading/README.org
+++ b/resources/research_skills/reading/README.org
@@ -5,18 +5,18 @@
 
 Key journals to follow and a link to their email alert system and/or RSS feed.
 
-|--------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------|
-| Name                           | Content                                                                                                                                                                                                                                                          | RSS and alerts |
-|--------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------|
-| [[https://www.nature.com/][Nature]]                         | The finest research in all fields on the basis of its originality, importance, interdisciplinary interest, ..., and surprising conclusions. Nature also provides news of topical and coming trends.                                                              | [[https://www.nature.com/][Link]]           |
-| [[https://www.nature.com/ncomms/][Nature Communications]]          | Multidisciplinary journal dedicated to publishing high-quality research in all areas of the biological, health, physical, chemical, ..., sciences. Papers represent important advances within each field.                                                        | [[https://www.nature.com/ncomms/][Link]]           |
-| [[https://www.nature.com/natmachintell/][Nature Machine Intelligence]]    | Nature Machine Intelligence publishes high-quality original research and reviews in a wide range of topics in machine learning, robotics and AI.                                                                                                                 | [[https://www.nature.com/natmachintell/][Link]]           |
-| [[https://nips.cc/][NeurIPS]]                        | THE ML conference.                                                                                                                                                                                                                                               |                |
-| [[https://academic.oup.com/bioinformatics/pages/About][Oxford Bioinformatics]]          | Developments in genome bioinformatics and computational biology                                                                                                                                                                                                  | [[https://academic.oup.com/bioinformatics/supplements/volume?login=false][Link]]           |
-| [[https://academic.oup.com/bioinformaticsadvances/pages/About][Oxford Bioinformatics Advances]] | A bioinformatics and computational biology journcal focused on molecular and cellular biology, covering methods and software for which the application of advanced computational methods is essential. Covers the conference procedings of [[https://www.iscb.org/][ISMB/ECCB and RECOMB]]. | [[https://academic.oup.com/pages/using-the-content][Link]]           |
-| [[https://www.science.org/journal/science][Science]]                        | Influential papers that significantly advance scientific understanding. They should merit recognition by the wider scientific community and general public, beyond that provided by specialty journals.                                                          | [[https://www.science.org/content/page/email-alerts-and-rss-feeds][Link]]           |
-| [[https://www.nature.com/srep/][Scientific Reports]]             | Original research from across all areas of the natural sciences, psychology, medicine and engineering.                                                                                                                                                           | [[https://www.nature.com/srep/][Link]]           |
-|--------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------|
+|--------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------|
+| Name                           | Content                                                                                                                                                                                                                                                            | RSS and alerts |
+|--------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------|
+| [[https://www.nature.com/][Nature]]                         | The finest research in all fields on the basis of its originality, importance, interdisciplinary interest, ..., and surprising conclusions. Nature also provides news of topical and coming trends.                                                                | [[https://www.nature.com/][Link]]           |
+| [[https://www.nature.com/ncomms/][Nature Communications]]          | Multidisciplinary journal dedicated to publishing high-quality research in all areas of the biological, health, physical, chemical, ..., sciences. Papers represent important advances within each field.                                                          | [[https://www.nature.com/ncomms/][Link]]           |
+| [[https://www.nature.com/natmachintell/][Nature Machine Intelligence]]    | Nature Machine Intelligence publishes high-quality original research and reviews in a wide range of topics in machine learning, robotics and AI.                                                                                                                   | [[https://www.nature.com/natmachintell/][Link]]           |
+| [[https://nips.cc/][NeurIPS]]                        | THE ML conference.                                                                                                                                                                                                                                                 |                |
+| [[https://academic.oup.com/bioinformatics/pages/About][Oxford Bioinformatics]]          | Developments in genome bioinformatics and computational biology                                                                                                                                                                                                    | [[https://academic.oup.com/bioinformatics/supplements/volume?login=false][Link]]           |
+| [[https://academic.oup.com/bioinformaticsadvances/pages/About][Oxford Bioinformatics Advances]] | A bioinformatics and computational biology journal focused on molecular and cellular biology. They cover methods and software for which the application of advanced computational methods is essential. Covers the conference proceedings of [[https://www.iscb.org/][ISMB/ECCB and RECOMB]]. | [[https://academic.oup.com/pages/using-the-content][Link]]           |
+| [[https://www.science.org/journal/science][Science]]                        | Influential papers that significantly advance scientific understanding. They should merit recognition by the wider scientific community and general public, beyond that provided by specialty journals.                                                            | [[https://www.science.org/content/page/email-alerts-and-rss-feeds][Link]]           |
+| [[https://www.nature.com/srep/][Scientific Reports]]             | Original research from across all areas of the natural sciences, psychology, medicine and engineering.                                                                                                                                                             | [[https://www.nature.com/srep/][Link]]           |
+|--------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------|
 Suggested RSS readers:
 - [[https://github.com/newsboat/newsboat][newsboat]]
 - [[https://github.com/sp1ff/elfeed-score/][elfeed]]
