added community based model networks

--- a/resources/machine_learning/model_networks/README.org
+++ b/resources/machine_learning/model_networks/README.org
@@ -23,6 +23,18 @@ this list as a starting point.
 
 |---------------------+----------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------+------------------------------+------------------------------------------------------------------------------------------+---------------------------|
 | Model               | Motivation                                                                                                                       | Use case                                             | Generation principle         | Expected properties                                                                      | DOI                       |
+|---------------------+----------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------+------------------------------+------------------------------------------------------------------------------------------+---------------------------|
 | Erdős-Rényi         | Models a network in which nodes are randomly connected.                                                                          | If a real network does not fit ER, it is non-random. | Nodes are randomly connected | Relatively little cliques. Less high-degree nodes (hubs). Posoisson degree distribution. | [[https://publi.math.unideb.hu/load_doi.php?pdoi=10_5486_PMD_1959_6_3_4_12][10.5486/pmd.1959.6.3-4.12]] |
 | Configuration model | Models a network in which the nodes are randomly connected, but with a given degree distribution (e.g., can be made scale-free). |                                                      | Hubs and spokes              |                                                                                          | [[https://doi.org/10.1002/rsa.3240060204][10.1002/rsa.3240060204]]    |
 |---------------------+----------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------+------------------------------+------------------------------------------------------------------------------------------+---------------------------|
+
+* Model networks with communities
+
+There exist few real world networks with a known community structure
+(i.e., asignment of nodes to clusters/communities). So, to test 
+
+|-------+---------------------+-----------------+--------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------+----------------------------|
+| Model | Generalises         | Community type  | Generation principle                                                                                                                       | Properties                                                             | DOI                        |
+|       | Configuration model | non-overlapping | Generate a configuration model with each node asigned to one of c communities. Rewire intra cluster edges to inter cluster edges post-hoc. | Degree distribution and community size follow power-law distributions. | [[https://doi.org/10.1103/PhysRevE.78.046110][10.1103/PhysRevE.78.046110]] |
+|       | Configuration model | overlapping     |                                                                                                                                            |                                                                        | [[https://doi.org/10.1103/PhysRevE.80.016118][10.1103/PhysRevE.80.016118]] |
+|-------+---------------------+-----------------+--------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------+----------------------------|
