--- a/resources/machine_learning/model_networks/README.org
+++ b/resources/machine_learning/model_networks/README.org
@@ -29,17 +29,19 @@ this list as a starting point.
 | Popularity-Similarity Optimisation (PSO) | Assumes preferential attachment via geometric proximity.                                                                         |                                                      | Nodes a disk are connected with a probability inverse to their hyperbolic distance. | Scale-Free and high clustering coefficient.                                              | [[https://doi.org/10.1038/nature11459][10.1038/nature11459]]       |
 |------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------+-------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------+---------------------------|
 
-* Model networks with communities
+** Model networks with communities
 
 There exist few real world networks with a known community structure
 (i.e., asignment of nodes to clusters/communities). So, to evaluate
 clustering and community detection algorithms, usually synthetic
 benchmarks are used.
 
-|-----------------------+---------------------+-----------------+---------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------+----------------------------|
-| Model                 | Generalises         | Community type  | Generation principle                                                                                                                        | Properties                                                             | DOI                        |
-|-----------------------+---------------------+-----------------+---------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------+----------------------------|
-|                       | Configuration model | non-overlapping | A configuration model with each node randomly assigned to one of c communities. Rewire intra cluster edges to inter cluster edges post-hoc. | Degree distribution and community size follow power-law distributions. | [[https://doi.org/10.1103/PhysRevE.78.046110][10.1103/PhysRevE.78.046110]] |
-|                       | Configuration model | overlapping     |                                                                                                                                             |                                                                        | [[https://doi.org/10.1103/PhysRevE.80.016118][10.1103/PhysRevE.80.016118]] |
-| nonuniform-PSO (nPSO) | PSO                 | non-overlapping | The radial coordinate of each node is sampled from one of c gausian distributions.                                                          |                                                                        | [[https://doi.org/10.1088/1367-2630/aac06f][10.1088/1367-2630/aac06f]]   |
-|-----------------------+---------------------+-----------------+---------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------+----------------------------|
+|------------------------------+-----------------------+-----------------+---------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------+------------------------------|
+| Model                        | Generalises           | Community type  | Generation principle                                                                                                                        | Properties                                                             | DOI                          |
+|------------------------------+-----------------------+-----------------+---------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------+------------------------------|
+|                              | Configuration model   | non-overlapping | A configuration model with each node randomly assigned to one of c communities. Rewire intra cluster edges to inter cluster edges post-hoc. | Degree distribution and community size follow power-law distributions. | [[https://doi.org/10.1103/PhysRevE.78.046110][10.1103/PhysRevE.78.046110]]   |
+|                              | Configuration model   | overlapping     |                                                                                                                                             |                                                                        | [[https://doi.org/10.1103/PhysRevE.80.016118][10.1103/PhysRevE.80.016118]]   |
+| nonuniform-PSO (nPSO)        | PSO                   | non-overlapping | The radial coordinate of each node is sampled from one of c gausian distributions.                                                          |                                                                        | [[https://doi.org/10.1088/1367-2630/aac06f][10.1088/1367-2630/aac06f]]     |
+| Stochastic Blockmodel        |                       |                 |                                                                                                                                             |                                                                        | [[https://doi.org/10.1016/0378-8733(83)90021-7][10.1016/0378-8733(83)90021-7]] |
+| Degree-preserving Blockmodel | Stochastic Blockmodel |                 |                                                                                                                                             |                                                                        | [[https://doi.org/10.1103/PhysRevE.83.016107][10.1103/PhysRevE.83.016107]]   |
+|------------------------------+-----------------------+-----------------+---------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------+------------------------------|
