--- a/resources/scientific_computing/remote/README.org
+++ b/resources/scientific_computing/remote/README.org
@@ -1,3 +1,5 @@
+#+TITLE: Woring remote
+
 * Remote
 
 ** To add
@@ -10,3 +12,75 @@
 - mount remote directory
   - sshfs
   - ftp? 
+
+* Setting up SSH
+** Logging in via the command line with SSH
+To log in with the user /bscuser/ on the remote node /mn1/, run:
+#+begin_src bash
+ ssh bscuser@mn1.bsc.es 
+#+end_src
+You will be prompted for your password.
+
+Note that the node mn1 is publicly accessible (i.e., via the
+internet). If the machine is only available on the intranet, you will
+have to enable your VPN first.
+
+** Avoiding passwords
+
+It is cumbersome to have to have to enter your password each time you ssh into a remote machine. 
+
+To avoid this, we will generate a ssh key pair, which consists of a private (under ~/.ssh/id_rsa, by default) and public key (under ~/.ssh/id_rsa.pub, by default):
+
+On your local machine run:
+#+begin_src bash
+  ssh-keygen
+#+end_src
+
+To copy the accepted private key to the remote machine (here mn1) run:
+#+begin_src bash
+ssh-copy-id  -i .ssh/id_rsa bscuser@mn1.bsc.es 
+#+end_src
+
+From now on, whenever we ssh into the remote machine, instead of being prompted for the password, we automatically offer the public id_rsa.pub file, which well be checked by the host to correspond (via a hash function) to the copied private id_rsa file. 
+
+** Machine aliases
+
+It is cumbersome to have to enter your username and the host address each time you want to ssh into the remote machine. 
+To avoid this, we will create an alias. 
+
+On the local machine, in the file '.ssh/config', add the following lines:
+
+#+begin_src bash
+Host mn1
+	HostName mn1.bsc.es
+	User bscuser
+     	IdentityFile ~/.ssh/id_rsa
+#+end_src
+
+To make your shell aware of this new configuration, run:
+#+begin_src bash
+  source .ssh/config
+#+end_src
+
+You can now ssh into the node mn1 running:
+#+begin_src bash
+  ssh mn1
+#+end_src
+
+** Window forwarding
+
+Sometimes, you want to have access to the GUI of the remote machine. We do so through X11 window forwarding. To enable this, simply SSH into the remote machine using the -X flag:
+
+#+begin_src bash
+  ssh -X mn1
+#+end_src
+
+Note that for this to work, you need to have an X window server running on the local machine. To check if this is the case, run:
+#+begin_src bash
+  echo $DISPLAY
+#+end_src
+Run this same command on the remote machine. If both these variable are set (i.e., echo returns a non-empty string), you should be good to go.
+
+Note that in the case you are using MacOS as a local machine, you need to install the X window server (XQuartz) on the local machine first ([[https://www.cyberciti.biz/faq/apple-osx-mountain-lion-mavericks-install-xquartz-server/][link]]). 
+
+
