--- a/README.org
+++ b/README.org
@@ -24,7 +24,7 @@ Being able to synthesise papers/concepts/ideas/... to their esssence. This enabl
 - recognise limittions/weaknesses of your own methods, opening up new research problems
 - comunicate your ideas. A paper and a research proposal need to be sold!
 
-** Key thinking skils that underly everything else
+** Key thinking skills that underly everything else
 
   - modular thinking ~ analytical thinking
   - hierarchical thinking
