--- a/README.org
+++ b/README.org
@@ -26,7 +26,7 @@ Being able to synthesise papers/concepts/ideas/... to their esssence. This enabl
 
 ** Key thinking skills that underly everything else
 
-  - modular thinking ~ analytical thinking
+  - modular thinking ~ analytical thinking. interfaces ?
   - hierarchical thinking
   - critical thinking 
 
