--- a/resources/machine_learning/embedding/README.org
+++ b/resources/machine_learning/embedding/README.org
@@ -14,3 +14,18 @@ applications).
 | A Comprehensive Survey of Graph Embedding:  Problems, techniques and Applications     | 1. Taxonomy of network based problems and methods                        | Kevin Chen-Chuan Chang    | 2018 | [[https://doi.org/10.1109/TKDE.2018.2807452][10.1109/TKDE.2018.2807452]] |
 | To embed or not: network embedding as a paradigm in computational biology             | 1. Motivates embedding over direct graph based algorithms                | Sharan                    | 2019 | [[https://doi.org/10.3389/fgene.2019.00381][10.3389/fgene.2019.00381]]  |
 |---------------------------------------------------------------------------------------+--------------------------------------------------------------------------+---------------------------+------+---------------------------|
+
+** Structural embeddings
+
+Network and node embedders that embed nodes close in space if they
+have the same structure. Not focused on capturing node neighbourhoods,
+i.e., structure only.
+
+|----------------------------------------------------+----------+-------------------------------------------------------------------------------------------------------------------+--------------+-----------+------+-------------------------|
+| Title                                              | Embedder | Relevance                                                                                                         | First author | Group     | Year | DOI                     |
+|----------------------------------------------------+----------+-------------------------------------------------------------------------------------------------------------------+--------------+-----------+------+-------------------------|
+| Asymmetric Transitivity Preserving Graph Embedding | HOPE     | 1. Embedds directed graphs. 2. Computes a node topological similarity matrix based on katz/pagerank/.. centrality | Mingdong Ou  | Wenwu Zhu | 2015 | [[http://dx.doi.org/10.1145/2939672.2939751][10.1145/2939672.2939751]] |
+|                                                    |          |                                                                                                                   |              |           |      |                         |
+|----------------------------------------------------+----------+-------------------------------------------------------------------------------------------------------------------+--------------+-----------+------+-------------------------|
+
+
